# aether-ai

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  docker-compose.yml  package.json
.agents/agents/: architect.md  deploy-agent.md  dev-agent.md  memory-keeper.md  pr-manager.md  qa-agent.md
.agents/skills/: code-execution.md  git-operations.md  web-search.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: build.yml  release.yml
apps/cli/: package.json  tsconfig.json
apps/cli/src/: index.ts
apps/desktop/: index.html  package.json  tsconfig.json
apps/desktop/src/: main.ts  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
scripts/: bootstrap.sh
